# school-cpp-project

./: CMakeLists.txt  README.md  dalsieVyrazy.txt  main.cpp  main.h  testyExpressions.cpp  testyStack.cpp  testySubory.cpp  vyrazy.txt  vyrazySCyklom.txt  vyrazySPremennou.txt
